@@ -49,7 +49,7 @@ public class AnvilModel {
 	 * @return <code>true</code> if the ray intersected the block
 	 */
 	public static boolean intersect(Ray ray) {
-		int data = ray.currentMaterial >> BlockData.BLOCK_DATA_OFFSET;
+		int data = ray.currentMaterial >> BlockData.OFFSET;
 		int orientation = 1 & data;
 		int damage = 3 & (data >> 2);
 		boolean hit = false;
