@@ -251,7 +251,7 @@ public class Ray {
 	 * @return Current block data (sometimes called metadata)
 	 */
 	public final int getBlockData() {
-		return 0xF & (currentMaterial >> BlockData.BLOCK_DATA_OFFSET);
+		return 0xF & (currentMaterial >> BlockData.OFFSET);
 	}
 
 	/**
@@ -361,6 +361,13 @@ public class Ray {
 		"black"
 	};
 
+	private static final String[] bits = {
+		"0000", "0001", "0010", "0011",
+		"0100", "0101", "0110", "0111",
+		"1000", "1001", "1010", "1011",
+		"1100", "1101", "1110", "1111",
+	};
+
 	/**
 	 * @return String description of the block's extra info
 	 */
@@ -394,7 +401,7 @@ public class Ray {
 		case Block.REDSTONEWIRE_ID:
 			return "power: " + data;
 		default:
-			return "";
+			return bits[data&15];
 		}
 	}
 
