@@ -1,4 +1,5 @@
 1.2.0 - TBD
+    * Added large flowers
     * Added new small flowers
     * Added new biome color data
     * Added Red Sand
